--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     body {font-family: 'Open Sans', Arial, sans-serif; margin:0; padding:0; line-height:1.6; background:#fff; color:#333;}
     header {background:#002b5c; color:#fff; text-align:center; padding:60px 20px;}
     header h1 {margin:0; font-size:2.2em;}
+    <header>
+  <img src="logo.png" alt="Logo Comunicación Efectiva" width="150">
+  <h1>Comunicación Efectiva</h1>
+</header>
     header p {margin-top:10px; font-size:1.2em;}
     nav {background:#e67e22; text-align:center; padding:10px;}
     nav a {color:#fff; margin:0 10px; text-decoration:none; font-weight:bold;}
