--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Comunicación y Liderazgo Expresivo</title>
   <style>
+    <img src="img/logo.png" alt="Logo Comunicación Efectiva" width="150">
     body {font-family: 'Open Sans', Arial, sans-serif; margin:0; padding:0; line-height:1.6; background:#fff; color:#333;}
     header {background:#002b5c; color:#fff; text-align:center; padding:60px 20px;}
     header h1 {margin:0; font-size:2.2em;}
