--- a/index.html
+++ b/index.html
@@ -5,14 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Comunicación y Liderazgo Expresivo</title>
   <style>
-    <img src="img/logo.png" alt="Logo Comunicación Efectiva" width="150">
     body {font-family: 'Open Sans', Arial, sans-serif; margin:0; padding:0; line-height:1.6; background:#fff; color:#333;}
     header {background:#002b5c; color:#fff; text-align:center; padding:60px 20px;}
-    header h1 {margin:0; font-size:2.2em;}
-    <header>
-  <img src="logo.png" alt="Logo Comunicación Efectiva" width="150">
-  <h1>Comunicación Efectiva</h1>
-</header>
+    header h1 {margin:10px 0 0 0; font-size:2.2em;}
     header p {margin-top:10px; font-size:1.2em;}
     nav {background:#e67e22; text-align:center; padding:10px;}
     nav a {color:#fff; margin:0 10px; text-decoration:none; font-weight:bold;}
@@ -30,10 +25,14 @@
     .cta a {display:inline-block; background:#e67e22; color:#fff; padding:12px 25px; text-decoration:none; border-radius:4px; font-weight:bold;}
     footer {background:#333; color:#fff; text-align:center; padding:20px;}
     footer a {color:#e67e22; text-decoration:none;}
+    header img {max-width:150px; display:block; margin:0 auto 20px auto;}
   </style>
 </head>
 <body>
   <header>
+    <!-- 👇 LOGO AQUÍ -->
+    <img src="img/logo.png" alt="Logo Comunicación Efectiva">
+
     <h1>Comunicación y Liderazgo Expresivo</h1>
     <p>Consultoría y formación para empresas y líderes en Ushuaia</p>
   </header>
