--- a/index.html
+++ b/index.html
@@ -30,13 +30,11 @@
 </head>
 <body>
   <header>
-    <!-- 👇 LOGO AQUÍ -->
-    <img src="img/logo.png" alt="Logo Comunicación Efectiva">
-
-    <h1>Comunicación y Liderazgo Expresivo</h1>
-    <p>Consultoría y formación para empresas y líderes en Ushuaia</p>
-  </header>
-
+    <header>
+  <img src="logo.jpg" alt="Logo Comunicación Efectiva" width="150">
+  <h1>Comunicación y Liderazgo Expresivo</h1>
+  <p>Consultoría y formación para empresas y líderes en Ushuaia</p>
+</header>
   <nav>
     <a href="#propuesta">Propuesta</a>
     <a href="#formato">Formato</a>
