--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
   <header>
     <header>
-  <img src="Logo.Jpg" alt="Logo Comunicación Efectiva" width="150">
+  <img src="logo.jpg" alt="Logo Comunicación Efectiva" width="150">
   <h1>Comunicación y Liderazgo Expresivo</h1>
   <p>Consultoría y formación para empresas y líderes en Ushuaia</p>
 </header>
