--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
 </head>
 <body>
   <header>
-    <header>
-  <img src="logo.jpg" alt= width="150">
-  <h1>Comunicación y Liderazgo Expresivo</h1>
-  <p>Consultoría y formación para empresas y líderes en Ushuaia</p>
-</header>
+    <img src="logo.png" alt="Logo Comunicación Efectiva">
+
+    <h1>Comunicación y Liderazgo Expresivo</h1>
+    <p>Consultoría y formación para empresas y líderes en Ushuaia</p>
+  </header>
+
   <nav>
     <a href="#propuesta">Propuesta</a>
     <a href="#formato">Formato</a>
@@ -118,3 +119,4 @@
   </footer>
 </body>
 </html>
+
