--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Logo Comunicación Efectiva">
-    <h1>Comunicación y Liderazgo Expresivo</h1>
-    <p>Consultoría y formación para empresas y líderes en Ushuaia</p>
-  </header>
+  <img src="/comunicacion-efectiva/logo.png" alt="Logo Comunicación Efectiva">
+  <h1>Comunicación y Liderazgo Expresivo</h1>
+  <p>Consultoría y formación para empresas y líderes en Ushuaia</p>
+</header>
 
   <nav>
     <a href="#propuesta">Propuesta</a>
